--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Webpack App</title>
+        <title>Registry demo</title>
     </head>
     <body>
         <div id="app" class="hidden">
@@ -22,9 +22,9 @@
                 <canvas id="qrcode" />
             </div>
 
-            <div id="room-list-wrapper" class="hidden">
+            <div id="user-list-wrapper" class="hidden">
                 <span>users in room</span>
-                <ul id="room-list"></ul>
+                <ul id="user-list"></ul>
             </div>
         </div>
         <div id="loading">loading</div>
